open image with pillow and save the file

--- a/ocr_with_tesseract_and_python.ipynb
+++ b/ocr_with_tesseract_and_python.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "0de02bd6",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bcea166a",
    "metadata": {},
    "outputs": [],
@@ -52,18 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "cba29f6c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the image\n",
-    "img = cv2.imread(\"bigsleep.jpg\")"
+    "img = cv2.imread(\"data/bigsleep.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "eb4cef7a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "f4cde395",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "\"THE BIG SLEEP\\nby Raymond Chandler\\n\\nIt was about eleven o'clock in the morning, mid October, with the sun not\\nshining and a look of hard wet rain in the clearness of the foothills. I was\\nwearing my powder-blue suit, with dark blue shirt, tie and display\\nhandkerchief, black brogues, black wool socks with dark blue clocks on\\nthem. I was neat, clean, shaved and sober, and I didn’t care who knew it. I\\nwas everything the well-dressed private detective ought to be. T was\\ncalling on four million dollars.\\n\\n‘The main hallway of the Sternwood place was two stories high. Over the\\nentrance doors, which would have let in a troop of Indian elephants, there\\n‘was a broad stained-glass panel showing a knight in dark armor rescuing\\n\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64b1c934",
+   "id": "036bf5a9",
    "metadata": {},
    "source": [
     "###### Image preprocessing\n",
@@ -112,17 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c6273376",
+   "execution_count": 23,
+   "id": "f9167535",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img2 = cv2.imread(\"book_page.jpg\")"
+    "img2 = cv2.imread(\"data/book_page.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "c26f4d83",
    "metadata": {},
    "outputs": [],
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "aa22aa94",
+   "execution_count": 25,
+   "id": "2b4e0cfc",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "'Design before you implement\\n\\nparticolasly if the project involves designing a product or service, ensure\\n\\na bave the best possible answer in the design phase before you start\\nimplementation: Another 80/20 rule says that 20 per cent of the prob-\\n\\nJems with any design project cause 80 per cent of the costs or overruns;\\nfe\\n\\n4 that 80 per cent of these critical problems arise in the design phase\\nni ‘ = :\\n\\n2 are hugely expensive to correct later, requiring massive rework and\\nas :\\n\\nin some cases retooling.\\n\\ni\\n\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e55e18",
+   "id": "e70fcd16",
    "metadata": {},
    "source": [
     "###### Resize the Image\n",
@@ -165,18 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cffb0eff",
+   "execution_count": 8,
+   "id": "bf5cf7a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img2 = cv2.resize(img2, None, fx=0.5, fy=0.5, interpolation = cv2.INTER_AREA)\n",
+    "#img2 = cv2.resize(img2, None, fx=0.5, fy=0.5, interpolation = cv2.INTER_AREA)\n",
     "#img2 = cv2.resize(img2, (img2.shape[1]//2, img2.shape[0]//2), interpolation = cv2.INTER_AREA)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b374cf6",
+   "id": "645c318c",
    "metadata": {},
    "source": [
     "###### Convert Image to Grayscale\n",
@@ -185,8 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "d169196c",
+   "execution_count": 26,
+   "id": "c16260b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c79eeb04",
+   "id": "b5882361",
    "metadata": {},
    "source": [
     "###### Convert image to black and white (using adaptive threshold)\n",
@@ -215,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b6cce5ee",
+   "execution_count": 27,
+   "id": "72e9e884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,12 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "f3a85782",
+   "execution_count": 28,
+   "id": "cca3700a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "adaptive_thresh_mean_c = cv2.adaptiveThreshold(img_gray, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, 51, 20)\n",
+    "adaptive_thresh_mean_c = cv2.adaptiveThreshold(img_gray, 255, cv2.ADAPTIVE_THRESH_MEAN_C, cv2.THRESH_BINARY, 15, 5)\n",
     "cv2.imshow(\"Adaptive thresholding mean c \", adaptive_thresh_mean_c)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -241,12 +241,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "97e7f1fc",
+   "execution_count": 29,
+   "id": "bbc86a55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "adap_thresh_gaussain_c = cv2.adaptiveThreshold(img_gray, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY,91, 12)\n",
+    "adap_thresh_gaussain_c = cv2.adaptiveThreshold(img_gray, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY,91, 5)\n",
     "cv2.imshow(\"Adaptive thresholding gaussain c\", adap_thresh_gaussain_c)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
@@ -254,17 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "a581ca7d",
+   "execution_count": 30,
+   "id": "8b1a3219",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Designs before you implement\\n\\nsf che project ivolves designing produc ot service, cose\\nresin yrs pomblesoawer inthe dein phe below you sar\\nwe \"Another 80/20 rule sya that 20 per cent of the prsb-\\nrreany design project cae OD pr cent of the cu rei,\\nes wg pe crak of thse cra probs arse inthe devign phe\\ney caer crete eng ae reve and\\n\\nproms ose\\n\\n“3\\n\\nee\\nGit:\\n\\nvd,\\n\\n'"
+       "'‘ Design before you implement\\n\\nsculatly if the project involves designing a product or service, ensure\\nhave the best possible answer in the design phase before you start\\nus nation. Another 80/20 rule says that 20 per cent of the prob-\\n‘ Oh any design project cause 80 per cent of the costs or overruns;\\nJems WH 80 per cent of these critical problems arise in the design phase\\n; oe ueely expensive to correct later, requiring massive rework and\\nand 3\\n\\nsn ome cases retooling.\\nip\\n\\n'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,17 +276,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "defc19ae",
+   "execution_count": 31,
+   "id": "b0c69b1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Design\\nign before you implement\\n\\nerent fe projet inva d\\neae igning a product or servic\\n\\nMe bet posible a\\n\\nity an oe eon peo Perce ep\\n\\nwe eat 0 per cent of pecomaced to ocr cy\\n\\nron Pc aed goin the cous over\\n\\naod aE rgely expensive to correc lt ms ase the desi se\\n\\nJp vome cases x00 eng ase ee ina\\nre ework and\\n\\n'"
+       "'Design before you implement\\n\\nparticolasly if the project involves designing a product or service, ensure\\n\\na bave the best possible answer in the design phase before you start\\nimplementation: Another 80/20 rule says that 20 per cent of the prob-\\n\\nJems with any design project cause 80 per cent of the costs or overruns;\\nfe\\n\\n4 that 80 per cent of these critical problems arise in the design phase\\nni ‘ = :\\n\\n2 are hugely expensive to correct later, requiring massive rework and\\nas :\\n\\nin some cases retooling.\\n\\ni\\n\\n'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,60 +297,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "411bb167",
+   "cell_type": "markdown",
+   "id": "c63c1da4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###### Open an Image using PIL (Pillow)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5b4a3430",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "e70c87cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=1200x1522 at 0x166C32C6910>\n"
+     ]
+    }
+   ],
+   "source": [
+    "im_file = \"data/page_01.jpg\"\n",
+    "im = Image.open(im_file)\n",
+    "print(im)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "316abbdb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1200, 1522)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(im.size)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "9131ea55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "im.show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "1cf516e9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "im.rotate(180).show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "91ff22a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save File\n",
+    "im.save(\"temp/page_01.jpg\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -516,6 +547,206 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7dfe72a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deab6b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3771bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64ff169e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f45573f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d00b7e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3057206",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b945532",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c5a946",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84644163",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29ad0aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9d4d26a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc1af098",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af13a19e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4af2593d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c748b35a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a275154d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cfe3252",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dcfe1ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb1f5842",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b69bcf5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88880f69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8bf5810",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7913b97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a36537fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91bfe37f",
    "metadata": {},
    "outputs": [],
    "source": []
